# SuperMan

./: .env.example  .gitignore  ARCH.md  README.md  deploy.md  design.md  go.mod  go.sum  main.go  main.py  pyproject.toml  test_config.py
agents/: agent_base.go  agents.go  agents_test.go  base_agent.go  ceo.go  cfo.go  chairman.go  cmo.go  cpo.go  cto.go  customer_support.go  data_analyst.go  hr.go  operations.go  rd.go
api/: router.go  server.go
config/: config.go
docs/: agent_mailbox_system.md  refactoring_summary.md
docs/plans/: 2026-02-05-agent-collaboration-protocol.md  2026-02-07-agent-mailbox-communication-design.md  2026-02-12-autonomous-operations.md
ds/: message.go  task.go
front/: README.md  package-lock.json  package.json  tailwind.config.js
front/src/: App.vue  App.vue.bak  style.css  types.ts
infra/: browser.go  db.go  llm.go  registry.go
mailbox/: dead_letter.go  idempotency.go  mailbox.go  mailbox_bus.go  mailbox_test.go  manager.go  message.go  metrics.go  priority_queue.go
scheduler/: auto_scheduler.go  persistence.go  priority_queue.go  task_generator.go  timer_engine.go  worklist.go
src/agents/: __init__.py  base.py  ceo.py  cfo.py  cmo.py  config.py  cpo.py  cto.py  customer_support.py  data_analyst.py  hr.py  operations.py  rd.py  router.py  state_manager.py  utils.py
state/: agent_state.go  global_state.go
timer/: timer_engine.go
tools/: send_message.go
types/: agent.go  message.go  task.go
utils/: ulid.go  utils.go
workflow/: message_router.go  orchestrator.go  state_manager.go  state_manager_test.go
(+75 files in other folders)
