[project]
name = "superman"
version = "0.1.0"
description = "AI 多智能体公司编排系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.8",
    "langchain-core>=1.2.8",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "pyyaml>=6.0.1",
]

[project.scripts]
superman = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
